ADD_COMPILE_OPTIONS( -std=c++11 )
#ADD_COMPILE_OPTIONS( -fPIC )
SET(LIB_SRCMNTR_SRC sourceMonitor.cpp netIoMonitorPcap.cpp netIoMonitor.cpp monitorImpl.cpp decpcap/decpcap.cpp)
ADD_LIBRARY(SrcMntr SHARED ${LIB_SRCMNTR_SRC})
ADD_LIBRARY(SrcMntrStatic STATIC ${LIB_SRCMNTR_SRC})
SET_TARGET_PROPERTIES(SrcMntrStatic PROPERTIES OUTPUT_NAME "SrcMntr")
SET_TARGET_PROPERTIES(SrcMntrStatic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(SrcMntr PROPERTIES CLEAN_DIRECT_OUTPUT 1)

LINK_DIRECTORIES("/usr/lib/x86_64-linux-gnu")
TARGET_LINK_LIBRARIES(SrcMntr libpcap.so)
TARGET_LINK_LIBRARIES(SrcMntrStatic libpcap.a)
#ADD_DEFINITIONS(-std=c++11 -fPIC)

